--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -39,12 +39,29 @@ section {
 section:nth-of-type(1) div {
   height: 164px;
   margin-top: 40px;
- }
+}
 section:nth-of-type(1) div:nth-of-type(2) h3 {
-   margin-left: 10px;
- }
-section:nth-of-type(2) div:nth-of-type(1) h1 {
- margin-top: 269px;
+  margin-left: 10px;
+}
+section:nth-of-type(1) img {
+  margin-top: 5px;
+  width: 92px;
+  height: auto;
+}
+section:nth-of-type(2) h1 {
+ margin-top: 291px;
+}
+section:nth-of-type(2) img {
+  position: absolute;
+  top: 43px;
+  left: 778px;
+  width: 318.6px;
+  transform: rotate(30.21deg);
+}
+section:nth-of-type(2) p {
+  top: 268px;
+  left: 1040px;
+  position: absolute;
 }
 section:nth-of-type(1) div:nth-of-type(1) p {
   margin-top: 5px;
@@ -87,11 +104,35 @@ section:nth-of-type(4) div:nth-of-type(4) p{
   margin-left: -35px;
   margin-top: 421px;
 }
+section:nth-of-type(5) img:nth-of-type(1) {
+  margin-top: 225px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+section:nth-of-type(5) img:nth-of-type(2) {
+  position: absolute;
+  top: 540px;
+  left: 660px;
+  width: 509px;
+  transform: rotate(18.98deg);
+}
 section:nth-of-type(5) img:nth-of-type(3) {
   left: 497px;
+  position: absolute;
+  top: 710px;
+  transform: rotate(25.49deg);
 }
 section:nth-of-type(5) img:nth-of-type(4) {
   left: 529px;
+  position: absolute;
+  top: 710px;
+  transform: rotate(25.49deg);
+}
+section:nth-of-type(5) p:nth-of-type(1) {
+  top: 718px;
+  left: 895px;
+  position: absolute;
 }
 section:nth-of-type(5) p:nth-of-type(2) {
   left: 157px;
@@ -107,16 +148,6 @@ section:nth-of-type(5) p:nth-of-type(4) {
   font-size: 10px;
   line-height: 115%;
 }
-.authors_place_1 {
-  top: 450px;
-  left: 1090px;
-  position: absolute;
-}
-.img_1 {
-  margin-top: 5px;
-  width: 92px;
-  height: auto;
-}
 h3 {
   font-weight: 500;
   font-size: 50px;
@@ -126,13 +157,6 @@ h1 {
   font-weight: bold;
   font-size: 216px;
   line-height: 88%;
-}
-.img_2 {
-  position: absolute;
-  top: 225px;
-  left: 828px;
-  width: 318.6px;
-  transform: rotate(30.21deg);
 }
 h2 {
   font-weight: 500;
@@ -151,12 +175,6 @@ h3 + p {
 .div_height {
   height: 1060px;
 }
-.img_3 {
-  margin-top: 225px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
 .rectangle {
   position: absolute;
   margin-top: 260px;
@@ -171,23 +189,6 @@ h3 + p {
   color: white;
   text-align: left;
 }
-.img_4 {
-  position: absolute;
-  top: 540px;
-  left: 660px;
-  width: 509px;
-  transform: rotate(18.98deg);
-}
-.authors_place_2 {
-  top: 718px;
-  left: 895px;
-  position: absolute;
-}
-.spines {
-  position: absolute;
-  top: 710px;
-  transform: rotate(25.49deg);
-}
 .p_top {
     position: absolute;
     top: 909px;
@@ -196,6 +197,6 @@ h3 + p {
   position: absolute;
   margin: auto 0;
   width: 100%;
-  height: 900px;
+  height: 1797px;
   background: black;
 }
