--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -129,12 +129,24 @@ section:nth-of-type(5) p:nth-of-type(3) {
 section:nth-of-type(5) p:nth-of-type(4) {
   left: 1120px;
 }
-section:nth-of-type(11) p,
-section:nth-of-type(11) h3 {
-  color: white;
+section:nth-of-type(10) div {
+  margin-top: 100px;
+  margin-left: 50px;
+}
+section:nth-of-type(10) img {
+  position: absolute;
+  width: 411px;
+  height: auto;
+  top: 255px;
+  left: 298px;
+}
+section:nth-of-type(10) div h3,
+section:nth-of-type(10) div:nth-of-type(1) p {
+  margin-left: 775px;
 }
 section:nth-of-type(11) div {
   margin-top: 135px;
+  margin-left: 50px;
 }
 section:nth-of-type(11) h3,
 section:nth-of-type(11) div:nth-of-type(2) p {
@@ -174,7 +186,9 @@ p {
   font-size: 20px;
   line-height: 134.5%;
 }
-h3 + p {
+h3 + p,
+h3 + h1,
+h1 + h3 {
   margin-top: 90px;
 }
 .height_1 {
@@ -188,6 +202,9 @@ h3 + p {
   height: auto;
   position: absolute;
   left: -50px;
+}
+.white_font{
+  color: white;
 }
 .section_6-10 {
   width: 100%;
