--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -43,9 +43,6 @@ section:nth-of-type(1) div {
 section:nth-of-type(1) div:nth-of-type(2) h3 {
   margin-left: 10px;
 }
-section:nth-of-type(1) p {
-  margin-top: 5px;
-}
 section:nth-of-type(2) h1 {
  margin-top: 291px;
 }
@@ -129,6 +126,23 @@ section:nth-of-type(5) p:nth-of-type(3) {
 section:nth-of-type(5) p:nth-of-type(4) {
   left: 1120px;
 }
+section:nth-of-type(9) div:nth-of-type(2) img {
+  width: 210px;
+  height: auto;
+  top: 22px;
+  left: 445px;
+  position: absolute;
+}
+section:nth-of-type(9) div:nth-of-type(3) img {
+  width: 230px;
+  height: auto;
+  top: 55px;
+  left: 55px;
+  position: absolute;
+}
+section:nth-of-type(9) div:nth-of-type(2) {
+  left: 750px;
+}
 section:nth-of-type(10) div {
   margin-top: 100px;
   margin-left: 50px;
@@ -137,12 +151,17 @@ section:nth-of-type(10) img {
   position: absolute;
   width: 411px;
   height: auto;
-  top: 255px;
+  top: 243px;
   left: 298px;
+}
+section:nth-of-type(10) div:nth-of-type(2) p {
+  top: 680px;
+  left: 520px;
+  position: absolute;
 }
 section:nth-of-type(10) div h3,
 section:nth-of-type(10) div:nth-of-type(1) p {
-  margin-left: 775px;
+  margin-left: 675px;
 }
 section:nth-of-type(11) div {
   margin-top: 135px;
@@ -153,17 +172,7 @@ section:nth-of-type(11) div:nth-of-type(2) p {
   margin-left: 10px;
 }
 section:nth-of-type(11) div:nth-of-type(2) p {
-  margin-top: 65px;
-}
-.authors_font {
-  font-weight: 580;
-  font-size: 10px;
-  line-height: 115%;
-}
-.img_1 {
-  margin-top: 5px;
-  width: 92px;
-  height: auto;
+  margin-top: 64px;
 }
 h3 {
   font-weight: 500;
@@ -189,7 +198,18 @@ p {
 h3 + p,
 h3 + h1,
 h1 + h3 {
-  margin-top: 90px;
+  margin-top: 80px;
+}
+.authors_font {
+  font-weight: 580;
+  font-size: 10px;
+  line-height: 115%;
+}
+.img_1 {
+  margin-top: 5px;
+  width: 92px;
+  height: auto;
+  margin-bottom: 5px ;
 }
 .height_1 {
   height: 1125px;
