--- a/stylesheets/font.css
+++ b/stylesheets/font.css
@@ -1,5 +1,85 @@
 @font-face {
 	font-family: 'Geometria';
+	src: url('Geometria-Thin.eot');
+	src: local('Geometria Thin'), local('Geometria-Thin'),
+		url('Geometria-Thin.woff') format('woff'),
+		url('Geometria-Thin.ttf') format('ttf'),
+		url('Geometria-Thin.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 100;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-ThinItalic.eot');
+	src: local('Geometria Thin Italic'), local('Geometria-ThinItalic'),
+		url('Geometria-ThinItalic.woff') format('woff'),
+		url('Geometria-ThinItalic.ttf') format('ttf'),
+		url('Geometria-ThinItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 100;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-ExtraLight.eot');
+	src: local('Geometria Extra Light'), local('Geometria-ExtraLight'),
+		url('Geometria-ExtraLight.woff') format('woff'),
+		url('Geometria-ExtraLight.ttf') format('ttf'),
+		url('Geometria-ExtraLight.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 200;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-ExtraLightItalic.eot');
+	src: local('Geometria Extra Light Italic'), local('Geometria-ExtraLightItalic'),
+		url('Geometria-ExtraLightItalic.woff') format('woff'),
+		url('Geometria-ExtraLightItalic.ttf') format('ttf'),
+		url('Geometria-ExtraLightItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 200;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-Light.eot');
+	src: local('Geometria Light'), local('Geometria-Light'),
+		url('Geometria-Light.woff') format('woff'),
+		url('Geometria-Light.ttf') format('ttf'),
+		url('Geometria-Light.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 300;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-LightItalic.eot');
+	src: local('Geometria Light Italic'), local('Geometria-LightItalic'),
+		url('Geometria-LightItalic.woff') format('woff'),
+		url('Geometria-LightItalic.ttf') format('ttf'),
+		url('Geometria-LightItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 300;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria.eot');
+	src: local('Geometria'), local('Geometria'),
+		url('Geometria.woff') format('woff'),
+		url('Geometria.ttf') format('ttf'),
+		url('Geometria.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 400;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-Italic.eot');
+	src: local('Geometria Italic'), local('Geometria-Italic'),
+		url('Geometria-Italic.woff') format('woff'),
+		url('Geometria-Italic.ttf') format('ttf'),
+		url('Geometria-Italic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 400;
+}
+@font-face {
+	font-family: 'Geometria';
 	src: url('Geometria-Medium.eot');
 	src: local('Geometria Medium'), local('Geometria-Medium'),
 		url('Geometria-Medium.woff') format('woff'),
@@ -8,9 +88,16 @@
 	font-style: normal;
 	font-weight: 500;
 }
-/* .medium {
-	font-family: 'Geometria Medium';
-} */
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-MediumItalic.eot');
+	src: local('Geometria Medium Italic'), local('Geometria-MediumItalic'),
+		url('Geometria-MediumItalic.woff') format('woff'),
+		url('Geometria-MediumItalic.ttf') format('ttf'),
+		url('Geometria-MediumItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 500;
+}
 @font-face {
 	font-family: 'Geometria';
 	src: url('Geometria-Bold.eot');
@@ -19,8 +106,55 @@
 		url('Geometria-Bold.ttf') format('ttf'),
 		url('Geometria-Bold.eot?#iefix') format('embedded-opentype');
 	font-style: normal;
-	font-weight: bold;
+	font-weight: 700;
 }
-/* .bold {
-	font-family: 'Geometria Medium';
-} */
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-BoldItalic.eot');
+	src: local('Geometria Bold Italic'), local('Geometria-BoldItalic'),
+		url('Geometria-BoldItalic.woff') format('woff'),
+		url('Geometria-BoldItalic.ttf') format('ttf'),
+		url('Geometria-BoldItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 700;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-ExtraBold.eot');
+	src: local('Geometria Extra Bold'), local('Geometria-ExtraBold'),
+		url('Geometria-ExtraBold.woff') format('woff'),
+		url('Geometria-ExtraBold.ttf') format('ttf'),
+		url('Geometria-ExtraBold.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 800;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-ExtraBoldItalic.eot');
+	src: local('Geometria Extra Bold Italic'), local('Geometria-ExtraBoldItalic'),
+		url('Geometria-ExtraBoldItalic.woff') format('woff'),
+		url('Geometria-ExtraBoldItalic.ttf') format('ttf'),
+		url('Geometria-ExtraBoldItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 800;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-Heavy.eot');
+	src: local('Geometria Heavy'), local('Geometria-Heavy'),
+		url('Geometria-Heavy.woff') format('woff'),
+		url('Geometria-Heavy.ttf') format('ttf'),
+		url('Geometria-Heavy.eot?#iefix') format('embedded-opentype');
+	font-style: normal;
+	font-weight: 900;
+}
+@font-face {
+	font-family: 'Geometria';
+	src: url('Geometria-HeavyItalic.eot');
+	src: local('Geometria Heavy Italic'), local('Geometria-HeavyItalic'),
+		url('Geometria-HeavyItalic.woff') format('woff'),
+		url('Geometria-HeavyItalic.ttf') format('ttf'),
+		url('Geometria-HeavyItalic.eot?#iefix') format('embedded-opentype');
+	font-style: italic;
+	font-weight: 900;
+}
