--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -207,8 +207,37 @@ section:nth-of-type(5) p:nth-of-type(3) {
 section:nth-of-type(5) p:nth-of-type(4) {
   left: 1120px;
 }
-section:nth-of-type(7) div:nth-of-type(2) h3:nth-of-type(1) {
-  text-align: right;
+section:nth-of-type(6) div {
+  margin-top: 50px;
+}
+section:nth-of-type(6) div:nth-of-type(1) {
+  width: 346px;
+  margin-right: 116px;
+}
+section:nth-of-type(6) div:nth-of-type(2) {
+  width: 193px;
+  margin-right: 425px;
+}
+section:nth-of-type(6) div:nth-of-type(3) {
+  width: 161px;
+}
+section:nth-of-type(6) div:nth-of-type(2) h3 {
+  margin-top: 20px;
+}
+section:nth-of-type(6) div:nth-of-type(2) p:nth-of-type(2) {
+  margin-top: 100px;
+}
+section:nth-of-type(6) div:nth-of-type(3) h2 {
+  margin-left: 52px;
+}
+section:nth-of-type(6) div:nth-of-type(3) img:nth-of-type(1) {
+  margin-top: 65px;
+}
+section:nth-of-type(6) div:nth-of-type(3) img:nth-of-type(2) {
+  margin-top: 280px;
+}
+section:nth-of-type(6) div:nth-of-type(3) img:nth-of-type(3) {
+  margin-top: 487px;
 }
 section:nth-of-type(7) div:nth-of-type(2) h3:nth-of-type(1) {
   margin-left: 1128px;
@@ -219,43 +248,52 @@ section:nth-of-type(7) div:nth-of-type(2) h2 {
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(1) {
   transform: rotate(26deg);
-  margin-left: 360px;
-  margin-top: 143px;
+  left: 360px;
+  top: 143px;
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(2) {
   transform: rotate(-24.5deg);
-  margin-left: 470px;
-  margin-top: 260px;
+  left: 470px;
+  top: 180px;
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(3) {
   transform: rotate(-12.4deg);
   left: 310px;
-  top: 300px;
+  top: 240px;
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(4) {
   transform: rotate(43.5deg);
   left: 340px;
-  top: 540px;
+  top: 480px;
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(5) {
   transform: rotate(-16deg);
   left: 470px;
-  top: 540px;
+  top: 480px;
 }
 section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(6) {
   transform: rotate(-16deg);
   left: 896px;
-  top: 630px;
+  top: 550px;
+}
+section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(1),
+section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(2) {
+  position: absolute;
+  transform: rotate(90deg);
+}
+section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(1) {
+  margin-left: -519px;
+  margin-top: -357px;
+}
+section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(2) {
+  margin-left: -190px;
+  margin-top: -388px;
 }
 section:nth-of-type(7) div:nth-of-type(2),
 section:nth-of-type(7) div:nth-of-type(3) h2,
 section:nth-of-type(8) div:nth-of-type(2),
 section:nth-of-type(8) div:nth-of-type(3) {
   position: absolute;
-}
-section:nth-of-type(7) div:nth-of-type(2) h2,
-section:nth-of-type(8) div:nth-of-type(2) h2 {
-  text-align: left;
 }
 section:nth-of-type(7) div:nth-of-type(2) h3:nth-of-type(1),
 section:nth-of-type(8) div:nth-of-type(2) h3:nth-of-type(1) {
@@ -365,6 +403,10 @@ p + h3 {
 }
 h3 + h2 {
   margin-top: 50px;
+}
+h2 + h2,
+h2 + p {
+  margin-top: 60px;
 }
 .authors_font {
   font-weight: 580;
@@ -502,6 +544,12 @@ h3 + h2 {
   top: 365px;
   transform: rotate(-12deg)
 }
+.p_place{
+  margin-top: 5px;
+}
 .abs {
   position: absolute;
+}
+.left {
+  text-align: left;
 }
