--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -276,21 +276,38 @@ section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(6) {
   left: 896px;
   top: 550px;
 }
-section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(1),
-section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(2) {
-  position: absolute;
+section:nth-of-type(7) div:nth-of-type(3) h2:nth-of-type(7) {
+  transform: rotate(-16deg);
+  left: 233px;
+  top: 368px;
+}
+section:nth-of-type(7) div:nth-of-type(3) img {
+  transform: rotate(-16deg);
+  left: 350px;
+  top: 340px;
+  width: 219px;
+  height: auto;
+}
+section:nth-of-type(7) div:nth-of-type(3) img {
+  margin-left: -270px;
+  margin-top: 200px;
+}
+section:nth-of-type(7) div:nth-of-type(3) h3:nth-of-type(1),
+section:nth-of-type(7) div:nth-of-type(3) h3:nth-of-type(2) {
   transform: rotate(90deg);
 }
-section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(1) {
+section:nth-of-type(7) div:nth-of-type(3) h3:nth-of-type(1) {
   margin-left: -519px;
-  margin-top: -357px;
+  margin-top: -360px;
 }
-section:nth-of-type(7) div:nth-of-type(4) h3:nth-of-type(2) {
+section:nth-of-type(7) div:nth-of-type(3) h3:nth-of-type(2) {
   margin-left: -190px;
-  margin-top: -388px;
+  margin-top: -390px;
 }
 section:nth-of-type(7) div:nth-of-type(2),
 section:nth-of-type(7) div:nth-of-type(3) h2,
+section:nth-of-type(7) div:nth-of-type(3) h3,
+section:nth-of-type(7) div:nth-of-type(3) img,
 section:nth-of-type(8) div:nth-of-type(2),
 section:nth-of-type(8) div:nth-of-type(3) {
   position: absolute;
